Initial commit: Funding arbitrage plugin implementation

--- a/packages/adapter-sqlite/tsconfig.json
+++ b/packages/adapter-sqlite/tsconfig.json
@@ -1,11 +1,14 @@
 {
-    "extends": "../core/tsconfig.json",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "src",
-        "strict": true
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "composite": true
     },
-    "include": [
-        "src/**/*.ts"
+    "include": ["src/**/*"],
+    "references": [
+        {
+            "path": "../core"
+        }
     ]
 }
