--- a/packages/client-lens/tsconfig.json
+++ b/packages/client-lens/tsconfig.json
@@ -3,10 +3,25 @@
     "compilerOptions": {
         "jsx": "react",
         "outDir": "dist",
-        "rootDir": "./src",
-        "strict": true
+        "rootDir": "src",
+        "strict": true,
+        "moduleResolution": "Bundler",
+        "allowImportingTsExtensions": true,
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "composite": true
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "src/**/*.json"
+    ],
+    "files": [
+        "src/index.ts",
+        "src/client.ts",
+        "src/post.ts",
+        "src/interactions.ts",
+        "src/memory.ts",
+        "src/actions.ts"
     ]
 }
