Update package dependencies, remove outdated README files, and enhance funding arbitrage plugin configuration
- Added new dependency: `@anush008/tokenizers-darwin-universal` to `package.json`.
- Removed multiple outdated README files in various languages.
- Updated `package.json` and `pnpm-lock.yaml` to reflect the changes in dependencies.
- Enhanced the funding arbitrage plugin configuration by refining the notification and risk management settings.
- Improved logging and error handling in the funding arbitrage agent and connectors.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,7 @@
         "dist"
     ],
     "scripts": {
-        "build": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:onnxruntime-node --external:better-sqlite3 && tsc --emitDeclarationOnly",
+        "build": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:onnxruntime-node --external:better-sqlite3 --external:@anush008/tokenizers-darwin-universal && tsc --emitDeclarationOnly",
         "lint": "eslint --fix  --cache .",
         "watch": "tsc --watch",
         "dev": "tsc --watch",
