--- a/packages/plugin-whatsapp/tsconfig.json
+++ b/packages/plugin-whatsapp/tsconfig.json
@@ -1,20 +1,9 @@
 {
-    "extends": "../core/tsconfig.json",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist",
-        "rootDir": "src",
-        "baseUrl": ".",
-        "types": [
-            "node",
-            "jest"
-        ]
+        "rootDir": "./src"
     },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist",
-        "**/*.test.ts"
-    ]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules", "dist"]
 }
