--- a/packages/plugin-ton/tsconfig.json
+++ b/packages/plugin-ton/tsconfig.json
@@ -1,15 +1,9 @@
 {
-    "extends": "../core/tsconfig.json",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "./src",
-        "typeRoots": [
-            "./node_modules/@types",
-            "./src/types"
-        ],
-        "declaration": true
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
-    "include": [
-        "src"
-    ]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules", "dist"]
 }
