--- a/packages/plugin-video-generation/tsconfig.json
+++ b/packages/plugin-video-generation/tsconfig.json
@@ -1,15 +1,9 @@
 {
-    "extends": "../core/tsconfig.json",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "src",
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
-        "types": [
-            "node"
-        ]
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
-    "include": [
-        "src/**/*.ts"
-    ]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["node_modules", "dist"]
 }
